kubernetes/apps/flight-tracker/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-tracker
  namespace: flight-tracker
  labels:
    app.kubernetes.io/name: flight-tracker
spec:
  selector:
    app.kubernetes.io/name: flight-tracker
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 10880
      targetPort: 80
    - protocol: TCP
      port: 8504
      targetPort: 8504
    - protocol: TCP
      port: 8754
      targetPort: 8754
    - protocol: TCP
      port: 18080
      targetPort: 8080
    - protocol: TCP
      port: 30001
      targetPort: 30001
    - protocol: TCP
      port: 30002
      targetPort: 30002
    - protocol: TCP
      port: 30003
      targetPort: 30003
    - protocol: TCP
      port: 30004
      targetPort: 30004
    - protocol: TCP
      port: 30005
      targetPort: 30005
    - protocol: TCP
      port: 30053
      targetPort: 30053
    - protocol: TCP
      port: 30054
      targetPort: 30054
    - protocol: TCP
      port: 30104
      targetPort: 30104
    - protocol: TCP
      port: 30105
      targetPort: 30105
    - protocol: TCP
      port: 30106
      targetPort: 30106
    - protocol: TCP
      port: 30154
      targetPort: 30154
    - protocol: TCP
      port: 30334
      targetPort: 30334
    - protocol: TCP
      port: 32004
      targetPort: 32004
    - protocol: TCP
      port: 32008
      targetPort: 32008
    - protocol: TCP
      port: 32088
      targetPort: 32088
    - protocol: TCP
      port: 32457
      targetPort: 32457
    - protocol: TCP
      port: 32458
      targetPort: 32458
    - protocol: TCP
      port: 32459
      targetPort: 32459
