kubernetes/apps/flight-tracker/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-tracker-ingress
  namespace: flight-tracker
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "piaware.flight-tracker.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flight-tracker
                port:
                  number: 18080
    - host: "fr24-feed.flight-tracker.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flight-tracker
                port:
                  number: 10080
    - host: "tar1090.flight-tracker.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flight-tracker
                port:
                  number: 10080
